[package]
name = "move-pprint"
version = "0.1.0"
edition = "2021"
description = "a script that makes move debug message readable"
license = "MIT"
repository = "https://github.com/blockquests/move-pprint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
